# company-and-job-count-scraper

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.md
app/: __main__.py
app/core/: config.py
app/utils/: cience.py  coresignal.py  linkedin.py
core/: config.py
schemas/: company.py
scripts/: format.sh  install.sh  lint.sh  run.sh
utils/: cience.py  coresignal.py  linkedin.py
