[tool.poetry]
name = "linkedin-scraper"
version = "0.1.0"
description = ""
authors = ["ksdfg <ksdfg123@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.21"
selenium = "^4.30.0"
webdriver-manager = "^4.0.2"
requests = "^2.32.3"
langchain-openai = "^0.3.11"
asyncio = "^3.4.3"
crawl4ai = "^0.5.0.post8"
pydantic = { extras = ["dotenv"], version = "^2.11.0" }
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^24.3.0"
isort = "^5.12.0"
autoflake = "^2.0.0"
flake8 = "^6.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
